[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/font/font_super_small.tres" type="DynamicFont" id=1]
[ext_resource path="res://Games/StoneAge/ConfigVars.gd" type="Script" id=2]
[ext_resource path="res://assets/font/themeA.tres" type="Theme" id=3]

[node name="ConfigVars" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -600.0
margin_bottom = -240.0
rect_min_size = Vector2( 200, 200 )
rect_pivot_offset = Vector2( -520, -55 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="."]
margin_right = 200.0
margin_bottom = 162.0
custom_constants/vseparation = 3
custom_constants/hseparation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="init_turns" type="ColorRect" parent="Grid"]
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 30 )
color = Color( 0.227451, 0.219608, 0.254902, 0.376471 )

[node name="Label" type="Label" parent="Grid/init_turns"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_right = -58.0
custom_constants/line_spacing = 1
custom_fonts/font = ExtResource( 1 )
text = "Turnos Iniciales"
valign = 1
autowrap = true

[node name="LineEdit" type="LineEdit" parent="Grid/init_turns"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 148.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -4.0
focus_mode = 1
custom_fonts/font = ExtResource( 1 )
text = "6"
align = 1
context_menu_enabled = false
shortcut_keys_enabled = false

[node name="phs_turns" type="ColorRect" parent="Grid"]
margin_top = 33.0
margin_right = 200.0
margin_bottom = 63.0
rect_min_size = Vector2( 200, 30 )
color = Color( 0.227451, 0.219608, 0.254902, 0.376471 )

[node name="Label" type="Label" parent="Grid/phs_turns"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_right = -58.0
custom_constants/line_spacing = 1
custom_fonts/font = ExtResource( 1 )
text = "Turnos Por Hora"
valign = 1
autowrap = true

[node name="LineEdit" type="LineEdit" parent="Grid/phs_turns"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 148.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -4.0
focus_mode = 1
custom_fonts/font = ExtResource( 1 )
text = "3"
align = 1
context_menu_enabled = false
shortcut_keys_enabled = false

[node name="total_turns" type="ColorRect" parent="Grid"]
margin_top = 66.0
margin_right = 200.0
margin_bottom = 96.0
rect_min_size = Vector2( 200, 30 )
color = Color( 0.227451, 0.219608, 0.254902, 0.376471 )

[node name="Label" type="Label" parent="Grid/total_turns"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_right = -58.0
custom_constants/line_spacing = 1
custom_fonts/font = ExtResource( 1 )
text = "Turnos Totales"
valign = 1
autowrap = true

[node name="LineEdit" type="LineEdit" parent="Grid/total_turns"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 148.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -4.0
focus_mode = 1
custom_fonts/font = ExtResource( 1 )
text = "30"
align = 1
context_menu_enabled = false
shortcut_keys_enabled = false

[node name="final_await" type="ColorRect" parent="Grid"]
margin_top = 99.0
margin_right = 200.0
margin_bottom = 129.0
rect_min_size = Vector2( 200, 30 )
color = Color( 0.227451, 0.219608, 0.254902, 0.376471 )

[node name="Label" type="Label" parent="Grid/final_await"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_right = -58.0
custom_constants/line_spacing = 1
custom_fonts/font = ExtResource( 1 )
text = "Espera Final (hs)"
valign = 1
autowrap = true

[node name="LineEdit" type="LineEdit" parent="Grid/final_await"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 148.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -4.0
focus_mode = 1
custom_fonts/font = ExtResource( 1 )
text = "1"
align = 1
context_menu_enabled = false
shortcut_keys_enabled = false

[node name="duration" type="ColorRect" parent="Grid"]
margin_top = 132.0
margin_right = 200.0
margin_bottom = 162.0
rect_min_size = Vector2( 200, 30 )
color = Color( 0.227451, 0.219608, 0.254902, 0.376471 )

[node name="Label" type="Label" parent="Grid/duration"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_right = -58.0
custom_constants/line_spacing = 1
custom_fonts/font = ExtResource( 1 )
text = "Duraci√≥n Total (hs)"
valign = 1
autowrap = true

[node name="LineEdit" type="LineEdit" parent="Grid/duration"]
modulate = Color( 0.984314, 1, 0.796078, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 148.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -4.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
text = "Nan"
align = 1
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false

[node name="wait_all" type="ColorRect" parent="Grid"]
margin_top = 165.0
margin_right = 200.0
margin_bottom = 195.0
rect_min_size = Vector2( 200, 30 )
color = Color( 0.227451, 0.219608, 0.254902, 0.376471 )

[node name="Label" type="Label" parent="Grid/wait_all"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_right = -58.0
custom_constants/line_spacing = 1
custom_fonts/font = ExtResource( 1 )
text = "Esperar a todos los jugadores al finalizar"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="Grid/wait_all"]
margin_left = 157.0
margin_top = 1.0
margin_right = 195.0
margin_bottom = 45.0
rect_scale = Vector2( 0.7, 0.7 )
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="ColorRect" parent="Grid"]
visible = false
margin_top = 165.0
margin_right = 200.0
margin_bottom = 180.0
rect_min_size = Vector2( 200, 15 )
color = Color( 0.227451, 0.219608, 0.254902, 0.376471 )

[node name="Label" type="Label" parent="Grid/title"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_right = -8.0
custom_colors/font_color = Color( 0.882353, 1, 0.415686, 1 )
custom_constants/line_spacing = 1
custom_fonts/font = ExtResource( 1 )
text = "Stone Age Config Vars"
align = 1
valign = 1
autowrap = true

[node name="ReadOnlyStop" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.501961, 0.501961, 0.501961, 0.203922 )
